Spacing issues simplified
• Lists: using the revied body spacing variable to manage vertical rhythm
• Nav Minor: Remove @supports statement, remove rule that made first child larger
• Accordions: Clean up sizing and spacing

--- a/ecms_base/themes/custom/ecms/assets/patterns/00-atoms/03-lists/_lists.scss
+++ b/ecms_base/themes/custom/ecms/assets/patterns/00-atoms/03-lists/_lists.scss
@@ -1,12 +1,13 @@
 ul,
 ol,
 dl {
-  padding: 0;
 
   li,
   dd {
-    margin-top: 0;
-    margin-left: 1.5em;
+    line-height: calc(var(--body-text-spacer) * 1.375);
+    margin-block-start: 0;
+    margin-inline-start: calc(var(--body-text-spacer) * 0.75);
+    padding-inline-start: calc(var(--body-text-spacer) * 0.25);
 
     &::marker {
       color: var(--fc__default__text-accent);
@@ -14,17 +15,10 @@ dl {
     }
 
     + li {
-      margin-top: calc(var(--body-text-spacer) * 0.5);
+      margin-top: calc(var(--body-text-spacer) * 0.25);
     }
   }
-
-  ul,
-  ol,
-  dl {
-    margin: 0;
-  }
 }
-
 
 // Utilities
 .qh-u__list-reset {
