--- a/ecms_base/themes/custom/ecms/components/02-organisms/navigation-minor/_navigation-minor.scss
+++ b/ecms_base/themes/custom/ecms/components/02-organisms/navigation-minor/_navigation-minor.scss
@@ -131,13 +131,13 @@
     position: relative;
     overflow: visible;
 
-    .qh__nav-minor > .qh__nav-minor__list > &:first-child {
-      a {
-        @supports (font-size: clamp(1rem, 2vw, 2rem)) {
-          font-size: clamp(1rem, 1.5vw, 1.125rem);
-        }
-      }
-    }
+    // Removing for now — I don’t think I like it. Really remove it if we all agree.
+    // .qh__nav-minor > .qh__nav-minor__list > &:first-child {
+    //   a {
+    //     font-size: clamp(1rem, 1.5vw, 1.125rem);
+    //     font-weight: calc(var(--p-font-wght) * 1.25);
+    //   }
+    // }
 
     //&__sub {}
 
